@@ -50,6 +50,7 @@ https://github.com/elastic/apm-server/compare/71df0d96445df35afe27f38bcf734a0828
 - Add Config option for excluding stack trace frames from `grouping_key` calculation {pull}482[482]
 - Expose expvar {pull}509[509]
 - Add `process.ppid` as optional field {pull}564[564]
+- Change `error.culprit` after successfully applying sourcemapping {pull}520[520]
 
 ==== Deprecated
 
